[package]
name = "dig-relay"
version = "0.4.2"
edition = "2021"
license = "GPL-2.0-only"
description = "DIG Relay — NAT-traversal rendezvous + circuit relay so DIG Nodes establish peer connections across NAT."
repository = "https://github.com/DIG-Network/dig-relay"

[lib]
name = "dig_relay"
path = "src/lib.rs"

[[bin]]
name = "dig-relay"
path = "src/main.rs"

[dependencies]
# The canonical relay WIRE TYPES (RelayMessage / RelayPeerInfo, RLY-001..RLY-007) are defined by
# the dig-gossip L2 gossip layer, which holds the matching relay CLIENT. dig-relay implements the
# SERVER side of that exact wire. We VENDOR a byte-identical copy of those types into
# `src/wire.rs` (see its provenance note) rather than depending on the dig-gossip crate, because
# the dig-gossip crate pulls the entire L2 gossip/consensus/TLS stack (chia-sdk-client, tungstenite
# with native-tls, etc.) just to expose two `serde` structs — and its published tag does not build
# against the current dig-protocol it resolves. The wire types themselves depend on nothing but
# serde + std, so vendoring them is small, robust, and kept locked by a serde-shape conformance
# test (`tests/wire_conformance.rs`). SYSTEM.md records the change-impact edge so the two stay synced.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "signal"] }
# Plain ws:// WebSocket framing by default (TLS is terminated at the AWS load balancer in the
# canonical relay.dig.net deployment; see DESIGN.md). `tokio_tungstenite::accept_async`/
# `client_async` are transport-generic, so the OPTIONAL mTLS listener (`src/tls.rs`, config
# `tls_cert_path`/`tls_key_path`) wraps the raw `TcpStream` in a `tokio_rustls` stream BEFORE
# handing it to tungstenite — no tungstenite TLS feature needed.
tokio-tungstenite = "0.24"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
# Optional mTLS termination on the relay's own listener (SPEC.md §3.2/§8): when an operator
# configures `tls_cert_path`/`tls_key_path`, the relay itself terminates TLS and REQUIRES a client
# certificate, deriving `peer_id = SHA-256(TLS SPKI DER)` from it (matching `dig-nat`/`dig-gossip`'s
# identity model — CLAUDE.md §5.2/§5.3). Pure-Rust rustls (not native-tls) so peer-cert capture is
# reliable on every OS (native-tls hides the client leaf on Windows/macOS — see dig-gossip's
# `connection/listener.rs` module docs), matching the versions already used by `dig-nat`/`dig-rpc`.
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
# PEM parsing via rustls-pki-types' own `PemObject` trait (not the separate `rustls-pemfile` crate,
# which is unmaintained as of RUSTSEC-2025-0134 and just wraps this same code) — already a
# transitive dependency of rustls; declared directly because we call its API.
rustls-pki-types = "1"
x509-parser = "0.16"
sha2 = "0.10"
# Tiny HTTP /health endpoint for the load balancer target-group check.
axum = "0.7"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Run-your-own-relay as an OS service: register/start/stop on Windows (SCM), Linux (systemd),
# macOS (launchd). Mirrors dig-node's service-manager approach so the DIG installer delegates to
# `dig-relay install`/`start` identically.
service-manager = "0.7"
# The DIG Peer Exchange (PEX) protocol. The relay embeds its transport-agnostic, sans-IO `PexEngine`
# to speak PEX in its INTRODUCER role toward registered nodes — riding the existing RelayMessage
# WebSocket as RLY-008 (see `src/pex.rs` + DESIGN.md "RLY-008"). dig-pex is standalone with a minimal
# dependency surface (serde + serde_json + tokio + rand), so unlike dig-gossip it drops in cleanly.
# Git-pinned in the bare form (tracks the crate's default branch) like the ecosystem's other DIG deps.
dig-pex = { git = "https://github.com/DIG-Network/dig-pex" }
# IPv6-first, IPv4-fallback (dig_ecosystem hard rule): the TCP/UDP listeners default-bind the IPv6
# unspecified address `[::]`, and `socket2` is how we clear `IPV6_V6ONLY` on that socket before
# `tokio` takes it over, so the one `[::]` listener stays dual-stack (see `src/net.rs`). Already a
# transitive dependency via tokio; declared directly because we call its API.
socket2 = "0.6"

[target.'cfg(windows)'.dependencies]
# Windows Service Control Protocol dispatcher: a service-manager-registered service must itself
# call StartServiceCtrlDispatcher + report Running within ~30s or the SCM kills it (error 1053).
windows-service = "0.7"

[dev-dependencies]
# End-to-end integration test: drive two simulated peers (WebSocket clients) whose direct
# path is blocked and assert they exchange a message THROUGH the running relay.
tokio-tungstenite = "0.24"
# Generate throwaway self-signed certs in-memory for the mTLS test suite (`tests/mtls.rs` +
# `src/tls.rs` unit tests) — DIG peer certs are self-signed by design (no CA), so this is the
# exact shape a real DIG node identity takes. Version matches `dig-nat`'s dev-dependency.
rcgen = "0.13"

[profile.release]
overflow-checks = true
